changed some site info

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,5 +7,6 @@
   title={Loci-Segmented: Improving Scene Segmentation Learning},
   author={Traub, Manuel and Becker, Frederic and Sauter, Adrian and Otte, Sebastian and Butz, Martin V},
   journal={arXiv preprint arXiv:2310.10410},
-  year={2023}
+  year={2023},
+  selected={true}
 }
