--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,4 +22,6 @@
   pdf={2240_Studying_How_to_Efficient.pdf},
   preview={model-guidance_preview.png},
   selected={true},
+  poster      = {https://docs.google.com/presentation/d/1CW69wFyC46pvTutPMqTGxhl3_ckyCw4B/edit?usp=sharing&ouid=112476999759097241984&rtpof=true&sd=true},
+  bibtex_show = {true}
 }   
