added first project (details to be added soon)

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,3 +26,50 @@
   poster      = {https://docs.google.com/presentation/d/1CW69wFyC46pvTutPMqTGxhl3_ckyCw4B/edit?usp=sharing&ouid=112476999759097241984&rtpof=true&sd=true},
   bibtex_show = {true}
 }   
+
+@article{zhang2021explainable,
+  title={Explainable semantic space by grounding language to vision with cross-modal contrastive learning},
+  author={Zhang, Yizhen and Choi, Minkyu and Han, Kuan and Liu, Zhongming},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  pages={18513--18526},
+  year={2021}
+}
+
+@article{searle1980minds,
+  title={Minds, brains, and programs},
+  author={Searle, John R},
+  journal={Behavioral and brain sciences},
+  volume={3},
+  number={3},
+  pages={417--424},
+  year={1980},
+  publisher={Cambridge University Press}
+}
+
+@article{stroop1935studies,
+  title={Studies of interference in serial verbal reactions.},
+  author={Stroop, J Ridley},
+  journal={Journal of experimental psychology},
+  volume={18},
+  number={6},
+  pages={643},
+  year={1935},
+  publisher={Psychological Review Company}
+}
+
+@inproceedings{radford2021learning,
+  title={Learning transferable visual models from natural language supervision},
+  author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
+  booktitle={International conference on machine learning},
+  pages={8748--8763},
+  year={2021},
+  organization={PmLR}
+}
+
+@article{tenney2019bert,
+  title={BERT rediscovers the classical NLP pipeline},
+  author={Tenney, Ian and Das, Dipanjan and Pavlick, Ellie},
+  journal={arXiv preprint arXiv:1905.05950},
+  year={2019}
+}
