--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,7 +33,10 @@
   journal={Advances in Neural Information Processing Systems},
   volume={34},
   pages={18513--18526},
-  year={2021}
+  year={2021},
+  bibtex_show={true},
+  abbr = {NeurIPS},
+  selected={false}
 }
 
 @article{searle1980minds,
@@ -44,7 +47,10 @@
   number={3},
   pages={417--424},
   year={1980},
-  publisher={Cambridge University Press}
+  publisher={Cambridge University Press},
+  bibtex_show={true},
+  abbr={BBS},
+  selected={false}
 }
 
 @article{stroop1935studies,
@@ -55,7 +61,10 @@
   number={6},
   pages={643},
   year={1935},
-  publisher={Psychological Review Company}
+  publisher={Psychological Review Company},
+  bibtex_show={true},
+  abbr={J. Exp. Psychol.},
+  selected={false}
 }
 
 @inproceedings{radford2021learning,
@@ -64,12 +73,18 @@
   booktitle={International conference on machine learning},
   pages={8748--8763},
   year={2021},
-  organization={PmLR}
+  organization={PmLR},
+  bibtex_show={true},
+  abbr={ICML},
+  selected={false}
 }
 
 @article{tenney2019bert,
   title={BERT rediscovers the classical NLP pipeline},
   author={Tenney, Ian and Das, Dipanjan and Pavlick, Ellie},
   journal={arXiv preprint arXiv:1905.05950},
-  year={2019}
+  year={2019},
+  bibtex_show={true},
+  abbr={ACL},
+  selected={false}
 }
