first project update

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -88,3 +88,24 @@
   abbr={ACL},
   selected={false}
 }
+
+@article{simonyan2014very,
+  title={Very deep convolutional networks for large-scale image recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014},
+  bibtex_show={true},
+  abbr={ICLR},
+  selected={false}
+}
+
+@inproceedings{devlin2019bert,
+  title={Bert: Pre-training of deep bidirectional transformers for language understanding},
+  author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  booktitle={Proceedings of the 2019 conference of the North American chapter of the association for computational linguistics: human language technologies, volume 1 (long and short papers)},
+  pages={4171--4186},
+  year={2019},
+  bibtex_show={true},
+  abbr={ACL},
+  selected={false}
+}
